<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFname"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFnameText"
        app:layout_constraintStart_toEndOf="@id/tvFname"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPatientID"
        android:text="@string/patient_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFname"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPatientIdText"
        app:layout_constraintStart_toEndOf="@id/tvPatientID"
        app:layout_constraintTop_toBottomOf="@id/tvFnameText"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGender"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPatientID"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGenderText"
        app:layout_constraintStart_toEndOf="@id/tvGender"
        app:layout_constraintTop_toBottomOf="@id/tvPatientIdText"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDob"
        android:text="@string/dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDobText"
        app:layout_constraintStart_toEndOf="@id/tvDob"
        app:layout_constraintTop_toBottomOf="@id/tvGenderText"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_mini_margin"
        android:layout_marginEnd="@dimen/side_mini_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvDobText"
        android:layout_marginTop="@dimen/side_mini_margin"
        android:background="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>